--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "network-1010",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,13 +9,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@supabase/supabase-js": "^2.84.0",
+    "babel-preset-expo": "~54.0.0",
     "expo": "~54.0.25",
+    "expo-constants": "~18.0.10",
+    "expo-font": "~14.0.9",
+    "expo-linking": "~8.0.9",
+    "expo-location": "~19.0.7",
+    "expo-router": "~6.0.15",
+    "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
+    "expo-system-ui": "~6.0.8",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.12.1",
+    "react-native-url-polyfill": "^3.0.0",
+    "react-native-worklets": "^0.5.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "react-refresh": "^0.18.0",
     "typescript": "~5.9.2"
   },
   "private": true
