--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@maplibre/maplibre-react-native": "^10.4.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@supabase/supabase-js": "^2.84.0",
     "babel-preset-expo": "~54.0.0",
     "expo": "~54.0.25",
+    "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.10",
+    "expo-crypto": "~15.0.7",
     "expo-font": "~14.0.9",
     "expo-linking": "~8.0.9",
     "expo-location": "~19.0.7",
