--- a/package.json
+++ b/package.json
@@ -6,18 +6,26 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "lint": "tsc --noEmit"
   },
   "dependencies": {
     "@maplibre/maplibre-react-native": "^10.4.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@sentry/react-native": "^7.8.0",
     "@supabase/supabase-js": "^2.84.0",
     "babel-preset-expo": "~54.0.0",
     "expo": "~54.0.25",
+    "expo-av": "^16.0.8",
+    "expo-blur": "^15.0.8",
     "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.10",
     "expo-crypto": "~15.0.7",
     "expo-font": "~14.0.9",
+    "expo-haptics": "^15.0.8",
     "expo-linking": "~8.0.9",
     "expo-location": "~19.0.7",
     "expo-router": "~6.0.15",
@@ -34,8 +42,13 @@
     "react-native-worklets": "^0.5.1"
   },
   "devDependencies": {
+    "@testing-library/react-native": "^13.3.3",
+    "@types/jest": "^30.0.0",
     "@types/react": "~19.1.0",
+    "jest": "^30.2.0",
+    "jest-expo": "^54.0.16",
     "react-refresh": "^0.18.0",
+    "ts-jest": "^29.4.6",
     "typescript": "~5.9.2"
   },
   "private": true
