Migrate from Supabase to Convex + refresh design aesthetic
Backend Migration:
- Replace Supabase with Convex for real-time backend
- Add Convex schema with 8 tables (pings, presenceSignals, trails, encounters, windowMoments, patternWalks, broadcasts, presence)
- Create mutations for all data operations
- Create queries for network stats, presence, encounters, temporal data, broadcasts
- Add scheduled cleanup functions for TTL data
- Device ID-based anonymous auth via AsyncStorage

Design Refresh (midday.ai-inspired):
- Warmer color palette: #0A0A0A background, #2DD4BF teal accent (replacing neon green)
- Add Inter font family (Regular, Medium, SemiBold) for modern typography
- SpaceMono now reserved for numerical data only
- Larger border radii (6, 10, 16, 24) for softer corners
- Smoother, more organic animation timing
- Updated onboarding copy to be warmer and less technical

Files:
- convex/ - New Convex backend (schema, mutations, queries, crons, cleanup)
- src/lib/convex.ts - Convex client setup with device ID management
- src/constants/Theme.ts - Refined color palette and typography
- src/constants/Motion.ts - Smoother animation system
- Removed src/lib/supabase.ts and supabase/ directory

--- a/app.json
+++ b/app.json
@@ -39,6 +39,9 @@
       "expo-router",
       "expo-font"
     ],
-    "scheme": "network-1010"
+    "scheme": "network-1010",
+    "extra": {
+      "convexUrl": "https://zany-spaniel-671.convex.cloud"
+    }
   }
 }
