Update Convex URL to production deployment

--- a/app.json
+++ b/app.json
@@ -41,7 +41,7 @@
     ],
     "scheme": "network-1010",
     "extra": {
-      "convexUrl": "https://zany-spaniel-671.convex.cloud"
+      "convexUrl": "https://ideal-mandrill-244.convex.cloud"
     }
   }
 }
